fixed alignment issue in tags although code is ugly

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -601,6 +601,12 @@ select:actived {
     font-size:19px;
     font-weight: 400;
 }
+.sideTitleTagSpecific {
+    display: block;
+    float: left;
+    font-size:19px;
+    font-weight: 400;
+}
 .entityList {
     list-style: none;
     padding: 0;
